# msl-mobile-bridge

./: README.md  index.d.ts  index.js  index.js.flow  package.json  react-native-message_signing-library.podspec
android/: build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/java/io/emurgo/rnmslbridge/: MessageSigningLibModule.java  MessageSigningLibPackage.java  Native.java  RPtr.java  Result.java  Utils.java
ios/: MessageSigningLib.h  MessageSigningLib.m  NSData+DataPtr.h  NSData+DataPtr.m  NSString+RPtr.h  NSString+RPtr.m  Podfile  SafeOperation.h  SafeOperation.m
ios/MessageSigningLib.h.xcodeproj/: project.pbxproj
ios/MessageSigningLib.h.xcodeproj/xcshareddata/xcschemes/: HaskellShelley.xcscheme
ios/MessageSigningLib.h.xcworkspace/: contents.xcworkspacedata
rust/: Cargo.toml  build.rs  cbindgen.toml
rust/src/: enum_maps.rs  js_result.rs  lib.rs  ptr_impl.rs  utils.rs
rust/src/android/: bridge.rs  mod.rs
rust/src/android/bridge_tools/: boxing.rs  primitives.rs  ptr_j.rs  result.rs  string.rs
rust/src/ios/: bridge.rs  mod.rs
rust/src/ios/bridge_tools/: data.rs  string.rs
