[package]
name = "msl-mobile-bridge"
version = "1.0.0"
authors = ["EMURGO"]
edition = "2018"

[build-dependencies]
cbindgen = "=0.14.1"

[patch.crates-io]
cryptoxide = { git = "https://github.com/emurgo/cryptoxide", tag="0.4.4"}

[dependencies]
cardano-message-signing = "1.0.1"
byteorder = "1.4.3"
base64 = "0.20.0"
# tag = "2.3.1"

[target.'cfg(target_os="android")'.dependencies]
jni = "0.20.0"

[lib]
name = "react_native_message_signing_library"
crate-type = ["staticlib", "cdylib"]

[profile.release]
debug = false
opt-level = 's'
lto = false
